--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -20,6 +20,32 @@ body {
     background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5) no-repeat;
 }
 
+a {
+    color: white;
+}
+
+h2 {
+    color: white;
+}
+
+p {
+    color: white;
+}
+
+// h2 {
+//     z-index: 100;
+//     position: absolute;
+//     color: white;
+//     font-size: 1.5vw;
+//     font-weight: bold;
+// }
+
+// p {
+//     z-index: 75;
+//     color: white;
+//     font-size: 1vw;
+// }
+
 // SOCIAL ICONS
 
 .social-icons {
@@ -45,43 +71,37 @@ body {
     color: $blue;
 }
 
-//
-
-a {
-    color: white;
-}
-
 // LANDING TITLE
 
 #landing-container {
     height: 75%;
 }
 
-.landing-text > h3 {
-    font-weight: 800;
-    font-size: 1.75rem;
-    padding-bottom: 1rem;
-    padding-top: 3rem;
-}
+// .landing-text > h3 {
+//     font-weight: 800;
+//     font-size: 1.75rem;
+//     padding-bottom: 1rem;
+//     padding-top: 3rem;
+// }
 
-.landing-text > h1 {
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 2rem;
-    // border-bottom: 10px solid $blue;
-}
+// .landing-text > h1 {
+//     font-weight: 800;
+//     text-transform: uppercase;
+//     font-size: 2rem;
+//     // border-bottom: 10px solid $blue;
+// }
 
-.landing-text-top {
-    color: $title-light;
-    padding: 0 0.75rem;
-    text-align: center;
-}
+// .landing-text-top {
+//     color: $title-light;
+//     padding: 0 0.75rem;
+//     text-align: center;
+// }
 
-.landing-text-bkd {
-    color: $title-dark;
-    padding: 0 0.75rem;
-    text-align: center;
-}
+// .landing-text-bkd {
+//     color: $title-dark;
+//     padding: 0 0.75rem;
+//     text-align: center;
+// }
 
 // ABOUT & PILLARS
 
@@ -90,4 +110,30 @@ a {
     width: 100%;
 	transform: translateY(var(--translateY));
 	will-change: transform;
+}
+
+// #about {
+//     position: relative;
+// }
+
+// MEDIA QUERIES
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    
 }
