--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -16,6 +16,17 @@ body {
   height: auto;
 }
 
+.stars {
+  width: 100%;
+  height: 0px;
+  position: absolute;
+}
+
+.stars-img {
+  width: 100%;
+  height: auto;
+}
+
 .helmet {
   width: 100%;
   height: auto;
@@ -163,6 +174,10 @@ a {
   height: 100%;
   width: 100%;
   position: relative;
+}
+
+p {
+  color: white;
 }
 
 @media (min-width: 576px) {
