--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -113,7 +113,7 @@ h2 {
 }
 .quote {
     position: absolute;
-    width: 95%;
+    width: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -182,6 +182,10 @@ p {
 }
 
 @media (min-width: 576px) {
+    .quote {
+        font-weight: bold;
+        font-size: small;
+    }
     .dot {
         height: 12vw;
         width: 12vw;
