--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -110,12 +110,12 @@ h2 {
 
 .quote {
   position: absolute;
-  width: 90%;
+  width: 85%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: x-small;
+  font-size: xx-small;
   font-weight: medium;
   color: #202020;
   opacity: 0;
@@ -181,10 +181,6 @@ p {
 }
 
 @media (min-width: 576px) {
-  .quote {
-    font-weight: bold;
-    font-size: small;
-  }
   .dot {
     height: 12vw;
     width: 12vw;
@@ -202,6 +198,10 @@ p {
   .helmet-img-2 {
     -webkit-transform: translate(87vw, -100vh) rotate(20deg);
             transform: translate(87vw, -100vh) rotate(20deg);
+  }
+  .quote {
+    font-weight: bold;
+    font-size: x-small;
   }
 }
 
@@ -254,6 +254,12 @@ p {
   }
   p {
     font-size: larger;
+  }
+}
+
+@media (min-width: 992px) and (min-width: 1200px) {
+  .quote {
+    font-size: small;
   }
 }
 /*# sourceMappingURL=membersv15.css.map */
