--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -113,11 +113,11 @@ h2 {
 }
 .quote {
     position: absolute;
-    width: 90%;
+    width: 85%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: x-small;
+    font-size: xx-small;
     font-weight: medium;
     color: $black;
     opacity: 0;
@@ -182,10 +182,6 @@ p {
 }
 
 @media (min-width: 576px) {
-    .quote {
-        font-weight: bold;
-        font-size: small;
-    }
     .dot {
         height: 12vw;
         width: 12vw;
@@ -201,6 +197,10 @@ p {
 @media (min-width: 768px) {
     .helmet-img-2 {
         transform: translate(87vw, -100vh) rotate(20deg);
+    }
+    .quote {
+        font-weight: bold;
+        font-size: x-small;
     }
 }
 
@@ -248,5 +248,11 @@ p {
     }
     p {
         font-size: larger;
+    }
+
+    @media (min-width: 1200px) {
+        .quote {
+            font-size: small;
+        }
     }
 }
