--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -10,22 +10,52 @@
 .col2 {
     width: 50%
 }
+
 h3 {
-    padding-top: 10px;
+    padding-top: 3rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+h5 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 20rem;
+    font-weight: lighter;
+}
+
+h4 {
+   margin-left: 8rem;
+   padding: 1rem;
+}
+h6 {
+    padding: 1rem;
+    max-width: 16rem;
 }
 
 
 .topbar-img {
-    width: 400px;
-    padding-top: 30px;
+    height: 400px;
+    margin-top: 3rem;
+    margin-left: 3rem;
+}
+
+
+hr {
+    height: 0.01rem;
+    background: white;
+    max-width: 25rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
-  background-color: #202020;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  position: relative;
-  vertical-align: top;
-  z-index: 1;
+    background-color: #202020;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    vertical-align: top;
+    z-index: 1;
 }
