--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -21,16 +21,13 @@ footer {
   margin-top: auto;
 }
 
-#projects, #members {
-  height: 70vh;
-}
-
 #contact, #landing {
   height: 90vh;
 }
 
 #about > .container {
   text-align: justify;
+  width: 50%;
 }
 
 #about {
@@ -157,10 +154,6 @@ nav {
     max-height: 50vw;
     height: 90vh;
   }
-  #members {
-    max-height: 100vw;
-    height: 100vh;
-  }
   .proj-title {
     position: absolute;
     top: 74%;
@@ -234,9 +227,14 @@ nav {
 }
 
 @media (min-width: 992px) {
-  #landing, #contact, #projects, #members {
+  #landing, #contact, #projects {
     height: 90vh;
     min-height: 100vw;
+    max-height: 100vh;
+  }
+  #members {
+    height: 15vh;
+    min-height: 30vw;
     max-height: 100vh;
   }
   a.about {
@@ -291,13 +289,13 @@ nav {
 }
 
 @media (min-width: 1200px) {
-  #landing, #contact, #projects, #members, #about {
+  #landing, #contact, #projects, #about {
     min-height: 50vw;
     height: 90vh;
   }
   #members {
     min-height: 40vw;
-    height: 80vh;
+    height: 40vh;
   }
   #about {
     min-height: 60vw;
