--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -17,7 +17,9 @@ $title-dark: #CB6724;
 // LANDING PAGE
 
 body {
-    background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5) no-repeat;
+    background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 a {
@@ -26,10 +28,16 @@ a {
 
 h2 {
     color: white;
+    font-size: 1.85vw;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white;
 }
 
 p {
     color: white;
+    font-size: 1.15vw;
 }
 
 // h2 {
@@ -109,12 +117,77 @@ p {
     position: absolute;
     width: 100%;
 	transform: translateY(var(--translateY));
-	will-change: transform;
+    will-change: transform;
+    z-index: -1;
 }
 
-// #about {
-//     position: relative;
+#about-header {
+    margin-top: 22rem;
+    z-index: 2;
+}
+
+.pencil {
+    display: block;
+    margin: 0 auto;
+    padding-top: 4rem;
+}
+
+// MISSION & MEMBERS
+
+#members-title {
+    margin-top: 35rem;
+}
+
+#members > .container {
+    text-align: center;
+    height: fit-content;
+}
+
+// BUTTONS
+
+.button {
+    text-align: center!important;
+    display: inline-block;
+    font-size: 1.25vw;
+    border-radius: 1em;
+    padding: 0.75em 2em;
+    margin: 1.5em 0;
+    position: absolute;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    // -webkit-transition: all 0.25s ease;
+    // transition: all 0.25s ease;
+}
+
+#members-button {
+    border: solid $blue;
+    background: $blue;
+}
+
+#about-button {
+    border: solid $green;
+    background: $green;
+}
+
+
+// FOOTER
+
+// #footer {
+//     position: absolute;
+//     bottom: 0;
+//     width: 100%;
+//     height: 5rem;
 // }
+
+
+// FEATURED PROJECTS
+
+.solar-system {
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+}
 
 // MEDIA QUERIES
 
