--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -251,10 +251,9 @@ h5 {
         min-height: 50vw;
     }
 
-    #members
-    {
-        height: 60vw;
-        min-height: 120vw;
+    #members {
+        height: 20vw;
+        min-height: 40vw;
     }
 
     #about {
@@ -290,7 +289,7 @@ h5 {
 
     .social-icons {
         // font-size: 50px;
-        font-size: 2.75rem;
+        font-size: 1.8rem;
         // width: 330px;
         width: 40vw;
     }
@@ -368,7 +367,7 @@ h5 {
     }
 
     .social-icons {
-        font-size: 3rem;
+        font-size: 2.5rem;
         width: 25vw;
     }
 
