--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -14,12 +14,13 @@ $grad-5: #202020;
 $title-light: #FFF3D6;
 $title-dark: #CB6724;
 
+
 // LANDING PAGE
 
 body {
     background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5);
-    background-size: cover;
-    background-attachment: fixed;
+    // background-size: cover;
+    // background-attachment: fixed;
 }
 
 a {
@@ -54,13 +55,15 @@ p {
 //     font-size: 1vw;
 // }
 
+
 // SOCIAL ICONS
 
 .social-icons {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    // justify-content: flex-end;
+    position: absolute;
+    left: 90%;
 }
 
 .social-icons>a:nth-child(1):hover {
@@ -78,6 +81,7 @@ p {
 .social-icons>a:nth-child(4):hover {
     color: $blue;
 }
+
 
 // LANDING TITLE
 
@@ -111,6 +115,7 @@ p {
 //     text-align: center;
 // }
 
+
 // ABOUT & PILLARS
 
 .scene {
@@ -132,6 +137,7 @@ p {
     padding-top: 4rem;
 }
 
+
 // MISSION & MEMBERS
 
 #members-title {
@@ -142,6 +148,7 @@ p {
     text-align: center;
     height: fit-content;
 }
+
 
 // BUTTONS
 
@@ -170,7 +177,6 @@ p {
     background: $green;
 }
 
-
 // FOOTER
 
 // #footer {
@@ -189,24 +195,78 @@ p {
     width: 80%;
 }
 
+
 // MEDIA QUERIES
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-    
+
+    #about-header {
+        margin-top: 30em;
+    }
+    .pencil {
+        padding-top: 2.5rem;
+    }
+    #members-title {
+        margin-top: 22rem;
+    }
+    #projects {
+        margin: 10rem 0;
+    }
+
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     
+    #about-header {
+        margin-top: 8em;
+    }
+    .pencil {
+        padding-top: 3rem;
+    }
+    #members-title {
+        margin-top: 10rem;
+    }
+
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
 
+    #about-header {
+        margin-top: 17em;
+    }
+    .pencil {
+        padding-top: 4rem;
+    }
+    #members-title {
+        margin-top: 35rem;
+    }
+    #projects {
+        margin: 1em 0;
+    }
+
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    
+
+    .social-icons {
+        margin-top: 2em;
+    }
+    #about-header {
+        margin-top: 39em;
+    }
+    .pencil {
+        padding-top: 5rem;
+    }
+    #members-title {
+        margin-top: 74rem;
+    }
+    #projects {
+        margin: 2em 0;
+        padding: 2em 0;
+    }
+
 }
