--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -257,7 +257,7 @@ p {
   }
 }
 
-@media (min-width: 992px) and (min-width: 1200px) {
+@media (min-width: 1200px) {
   .quote {
     font-size: small;
   }
