--- a/assets/css/webteam.css
+++ b/assets/css/webteam.css
@@ -1,5 +1,19 @@
 body {
-  background-color: #787878;
+  background-color: #202020;
+  position: relative;
+}
+
+.role {
+  font-size: xx-small;
+}
+
+.col-sm-5th {
+  width: 20%;
+  float: left;
+}
+
+.web {
+  overflow: auto;
 }
 
 .navbar.scrolled {
@@ -9,19 +23,9 @@ body {
   color: white;
 }
 
-.col-sm-5th {
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-p {
-  font-size: 11px;
-  margin-bottom: 0;
+h6 {
   color: white;
   font-style: italic;
-  text-align: center;
 }
 
 .header {
@@ -39,8 +43,6 @@ h1 {
   font-size: 40px;
   font-weight: bold;
   font-style: normal;
-  text-align: center;
-  color: white;
 }
 
 footer {
@@ -48,7 +50,9 @@ footer {
   color: white;
   padding: 20px;
   text-align: center;
-  margin-top: auto;
+  position: relative;
+  vertical-align: top;
+  z-index: 1;
 }
 
 h2 {
@@ -61,52 +65,49 @@ h2 {
 }
 
 .dot {
-  height: 10vw;
-  width: 10vw;
+  height: 8vw;
+  width: 8vw;
   background-color: white;
   border-radius: 50%;
   display: inline-block;
   position: relative;
   text-align: center;
-  min-height: 120px;
-  min-width: 120px;
+  min-height: 100px;
+  min-width: 100px;
+}
+
+.dot.blank {
+  background-color: #202020;
+}
+
+.dark {
+  color: #202020;
 }
 
 .quote {
   position: absolute;
+  width: 85%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: x-small;
+  font-size: xx-small;
   font-weight: medium;
   color: #202020;
   opacity: 0;
 }
 
-.web > .container {
+.web > .cont {
   text-align: center;
-  margin-bottom: 1vh;
-}
-
-.web {
   overflow: auto;
-  padding-bottom: 5vh;
+  margin-bottom: 1vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .name {
   font-weight: bold;
   font-style: normal;
-}
-
-div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4, div.col-6.col-sm-1, div.col-6.col-sm-2 {
-  padding: 5vh 0 0 0;
-}
-
-.header > p {
-  font-size: medium;
-  text-align: center;
-  color: white;
 }
 
 .member {
@@ -118,6 +119,10 @@ div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, 
   border-radius: 50%;
   height: 94%;
   width: 94%;
+}
+
+.blank {
+  border: 4px solid #202020;
 }
 
 .green {
@@ -150,19 +155,42 @@ a {
   position: relative;
 }
 
-.col-sm-5th {
-  width: 20%;
-  float: left;
+p {
+  color: white;
 }
 
 @media (min-width: 576px) {
-  body {
-    background-image: url("../img/members/members1.png");
-    background-size: cover;
+  .dot {
+    height: 12vw;
+    width: 12vw;
   }
-  .col-sm-5th {
-    width: 20%;
-    float: left;
+  .galaxy {
+    bottom: 50px;
+  }
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -140vh) rotate(20deg);
+            transform: translate(87vw, -140vh) rotate(20deg);
+  }
+  .role {
+    font-size: x-small;
+  }
+}
+
+@media (min-width: 768px) {
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -100vh) rotate(20deg);
+            transform: translate(87vw, -100vh) rotate(20deg);
+  }
+  .quote {
+    font-weight: bold;
+    font-size: x-small;
+  }
+}
+
+@media (min-width: 992px) {
+  .helmet-img-2 {
+    -webkit-transform: translate(87vw, -200vh) rotate(20deg);
+            transform: translate(87vw, -200vh) rotate(20deg);
   }
   .header {
     margin-bottom: 5vh;
@@ -170,17 +198,8 @@ a {
   h2 {
     margin-bottom: 5vh;
   }
-  .team > .container, .web > .container {
+  .team > .container, .exec > .container {
     margin-bottom: 5vh;
-  }
-  a.about {
-    border-bottom: solid #99CC99;
-  }
-  a.members {
-    border-bottom: solid #99CCFF;
-  }
-  a.projects {
-    border-bottom: solid #E06B65;
   }
   .dot.red:hover {
     background-color: #E06B65;
@@ -212,12 +231,20 @@ a {
   .quote {
     opacity: 1;
   }
+  .quote:hover {
+    z-index: 1;
+  }
   p {
     font-size: larger;
   }
-  .header > p {
-    font-size: x-large;
-    padding-top: 2vh;
+}
+
+@media (min-width: 1200px) {
+  .quote {
+    font-size: small;
+  }
+  .role {
+    font-size: small;
   }
 }
 /*# sourceMappingURL=webteam.css.map */
