added loading background to about page, added more to project page

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -13,6 +13,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-image: url(../img/about/gradient+clouds.png);
   background-size: cover;
+  background-color: #EEF7FF
 }
 
 .navbar.scrolled {
@@ -153,73 +154,90 @@ figcaption {
   #container {
     visibility: none;
   }
+
   .column1 {
     display: none;
   }
+
   .column2 {
     display: none;
   }
+
   .row:after {
     display: none;
     clear: both;
   }
+
   #mobile {
     visibility: visible;
     display: block;
   }
+
   #mobile2 {
     visibility: visible;
   }
+
   #aboutpic1,
   #aboutpic2 {
     visibility: hidden;
     display: none;
   }
+
   #aboutpic3 {
     visibility: hidden;
     display: none;
   }
+
   figcaption {
     visibility: hidden;
     display: none;
   }
+
   #pillarsmobile1,
   #pillarsmobile3 {
     visibility: visible;
     display: block;
   }
+
   #pillars1 {
     visibility: hidden;
     display: none;
   }
+
   #pillars3 {
     visibility: hidden;
     display: none;
   }
+
   #aboutpic3mobile {
     visibility: visible;
     display: block;
     width: 30rem;
   }
+
   #originmobile {
     visibility: visible;
     display: block;
     text-align: justify;
   }
+
   #front {
     visibility: hidden;
     display: none;
   }
+
   #frontmobile {
     visibility: visible;
     display: block;
   }
+
   #originmobiletitle,
   #missionmobile,
   #inventmobile {
     visibility: visible;
     display: block;
   }
+
   #mission,
   #front {
     visibility: hidden;
@@ -234,59 +252,74 @@ figcaption {
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
+
   h2 {
     text-align: left;
     font-size: 35px;
   }
+
   h4 {
     font-weight: 600;
     font-style: italic;
     padding-bottom: 2rem;
     font-size: 25px;
   }
+
   #container {
     visibility: visible;
   }
+
   .column1 {
     display: visible;
   }
+
   .column2 {
     display: visible;
   }
+
   .row:after {
     display: visible;
     clear: both;
   }
+
   #mobile {
     visibility: none;
   }
+
   #aboutpic1,
   #aboutpic2 {
     visibility: visible;
     display: block;
   }
+
   #aboutpic3 {
     visibility: visible;
     display: block;
   }
+
   #aboutpic3mobile {
     visibility: hidden;
     display: none;
   }
+
   #mobile2 {
     visibility: visible;
   }
+
   #pillars1 {
     visibility: visible;
   }
+
   #pillars3 {
     visibility: visible;
   }
+
   #pillarsmobile1,
   #pillarsmobile3 {
     visibility: hidden;
     display: none;
   }
+
   figcaption {
     font-style: italic;
     font-weight: 10px;
@@ -296,19 +329,23 @@ figcaption {
     visibility: visible;
     display: block;
   }
+
   #originmobile {
     visibility: hidden;
     display: none;
   }
+
   #front,
   #mission {
     visibility: visible;
     display: block;
   }
+
   #frontmobile {
     visibility: hidden;
     display: none;
   }
+
   #originmobiletitle,
   #missionmobile,
   #inventmobile {
@@ -323,14 +360,17 @@ figcaption {
     display: inline;
     visibility: visible;
   }
+
   #mobile {
     visibility: hidden;
     display: none;
   }
+
   #mobile2 {
     visibility: hidden;
     block: none;
   }
+
   .column1 {
     float: left;
     width: 50%;
@@ -339,6 +379,7 @@ figcaption {
     display: inline;
     visibility: visible;
   }
+
   .column2 {
     float: right;
     width: 50%;
@@ -347,22 +388,26 @@ figcaption {
     display: inline;
     visibility: visible;
   }
+
   .row:after {
     display: table;
     clear: both;
   }
+
   #aboutpic1 {
     width: 30rem;
     margin-left: auto;
     margin-right: auto;
     visibility: visible;
   }
+
   #aboutpic2 {
     width: 30rem;
     margin-left: auto;
     margin-right: auto;
     visibility: visible;
   }
+
   #aboutpic3 {
     height: 23rem;
     width: 32rem;
@@ -370,10 +415,12 @@ figcaption {
     margin-right: auto;
     visibility: visible;
   }
+
   #aboutpic3mobile {
     visibility: hidden;
     display: none;
   }
+
   #pillars3 {
     width: 36rem;
     display: inline;
@@ -381,6 +428,7 @@ figcaption {
     margin-right: auto;
     visibility: visible;
   }
+
   #pillars1 {
     width: 36rem;
     padding-top: 1em;
@@ -389,6 +437,7 @@ figcaption {
     margin-right: auto;
     visibility: visible;
   }
+
   #pillarsmobile1,
   #pillarsmobile3 {
     visibility: hidden;
@@ -396,6 +445,7 @@ figcaption {
     margin-left: auto;
     margin-right: auto;
   }
+
   figcaption {
     font-style: italic;
     font-weight: 10px;
@@ -405,44 +455,53 @@ figcaption {
     visibility: visible;
     display: block;
   }
+
   #end {
     display: block;
     visibility: visible;
   }
+
   #origin {
     padding-top: 75px;
     padding-left: 60px;
     width: 500px;
   }
+
   #originmobile {
     visibility: hidden;
     display: none;
   }
+
   #front,
   #mission {
     visibility: visible;
     display: block;
   }
+
   #frontmobile {
     visibility: hidden;
     display: none;
   }
+
   #originmobiletitle,
   #missionmobile,
   #inventmobile {
     visibility: hidden;
     display: none;
   }
+
   h1 {
     text-align: center;
     font-weight: bold;
     padding-bottom: 0.4rem;
     font-size: 50px;
   }
+
   h2 {
     text-align: left;
     font-size: 35px;
   }
+
   h4 {
     font-weight: 600;
     font-style: italic;
@@ -450,4 +509,5 @@ figcaption {
     font-size: 25px;
   }
 }
+
 /*# sourceMappingURL=about.css.map */
