group underline and title and change column to bootstrap columns

--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -61,10 +61,10 @@ h5 {
 }
 
 #how {
-    padding-left: 3rem;
     font-style: italic;
     font-weight: 600;
     color: #5B5B5B;
+    padding-bottom: 30px;
 }
 
 
@@ -104,45 +104,41 @@ p {
 #underline1 {
     background: rgba(246, 208, 224, 0.6);
     border-radius: 50px;
-    height: 21px;
-    width: 179px;
+    width: 308px;
+    height: 20px;
     position: absolute;
     z-index: -1;
-    left: 170px;
-    top: 690px;
+    transform: translateY(-32px);
 }
 
 #underline2 {
     background: rgba(246, 208, 224, 0.6);
     border-radius: 50px;
-    height: 21px;
-    width: 182px;
+    width: 308px;
+    height: 20px;
     position: absolute;
     z-index: -1;
-    left: 170px;
-    top: 805px;
+    transform: translateY(-32px);
 }
 
 #underline3 {
     background: rgba(246, 208, 224, 0.6);
     border-radius: 50px;
-    height: 21px;
-    width: 179px;
+    width: 308px;
+    height: 20px;
     position: absolute;
     z-index: -1;
-    left: 170px;
-    top: 830px;
+    transform: translateY(-32px);
 }
 
 #underline4 {
     background: rgba(246, 208, 224, 0.6);
     border-radius: 50px;
-    height: 21px;
-    width: 179px;
+    width: 308px;
+    height: 20px;
     position: absolute;
     z-index: -1;
-    left: 270px;
-    top: 830px;
+    transform: translateY(-32px);
 }
 
 #underline5 {
@@ -152,8 +148,7 @@ p {
     height: 20px;
     position: absolute;
     z-index: -1;
-    left: 150px;
-    top: 1030px;
+    transform: translateY(-42px);
 }
 
 #underline6 {
@@ -163,8 +158,7 @@ p {
     height: 20px;
     position: absolute;
     z-index: -1;
-    left: 705px;
-    top: 1770px;
+    transform: translateY(-42px);
 }
 
 #underline7 {
@@ -174,8 +168,7 @@ p {
     height: 20px;
     position: absolute;
     z-index: -1;
-    left: 150px;
-    top: 2010px;
+    transform: translateY(-42px);
 }
 
 #underline8 {
@@ -185,8 +178,7 @@ p {
     height: 20px;
     position: absolute;
     z-index: -1;
-    left: 705px;
-    top: 2650px;
+    transform: translateY(-42px);
 }
 
 #d1p1 {
@@ -206,4 +198,8 @@ p {
     padding-right: 10px;
     border-right: 3px solid #202020;
 
+}
+
+#d4p3 {
+    border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
 }
