--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -27,17 +27,24 @@
     -webkit-transition: background-color 200ms linear;
     transition: background-color 200ms linear;
 }
+
 #proj-answers {
     padding: 0.8rem;
     max-width: 16rem;
     padding-right: 1rem;
     font-family: 'Chivo', sans-serif;
+    height: 25%;
 }
 
 #proj-details {
-    margin-left: 6rem;
     padding: 0.95rem;
     font-family: 'Chivo', sans-serif;
+    text-align: right;
+    height: 20%;
+}
+
+.details {
+    overflow: auto;
 }
 
 
@@ -77,7 +84,6 @@ h5 {
 .topbar-img {
     height: 400px;
     margin-top: 2.5rem;
-    margin-left: 2.5rem;
 }
 
 
@@ -98,7 +104,11 @@ footer {
     text-align: center;
     position: relative;
     vertical-align: top;
+    z-index: 1;
+}
 
+a {
+    color: white;
 }
 
 p {
@@ -207,4 +217,19 @@ p {
 
 #d4p3 {
     border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
+}
+
+
+@media (min-width: 576px) {
+    .topbar-img {
+        height: 400px;
+        margin-top: 2.5rem;
+        margin-left: 2.5rem;
+    }
+
+    #proj-details {
+        padding: 0.95rem;
+        font-family: 'Chivo', sans-serif;
+        text-align: right;
+    }
 }
