member names updated

--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -24,6 +24,11 @@ body {
     height: auto;
 }
 
+.role {
+    display: none;
+    visibility: hidden;
+}
+
 .stars {
     width: 100%;
     height: 0px;
@@ -76,7 +81,7 @@ p.header {
 }
   
 h1 {
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: bold;
     font-style: normal;
 }
@@ -95,7 +100,7 @@ h2 {
     color: white;
     text-align: center;
     font-style: normal;
-    font-size: 25;
+    font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1vh;
 }
@@ -117,7 +122,7 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: xx-small;
+    font-size: 0.1rem;
     font-weight: medium;
     color: $black;
     opacity: 0;
@@ -179,6 +184,7 @@ a {
 
 p {
     color: white;
+    font-size: 0.75rem;
 }
 
 @media (min-width: 576px) {
@@ -200,7 +206,11 @@ p {
     }
     .quote {
         font-weight: bold;
-        font-size: x-small;
+        font-size: 0.2rem;
+    }
+    .role {
+        display: block;
+        visibility: visible;
     }
 }
 
@@ -247,12 +257,12 @@ p {
         z-index: 1;
     }
     p {
-        font-size: larger;
+        font-size: 1rem;
     }
 }
 
 @media (min-width: 1200px) {
     .quote {
-        font-size: small;
+        font-size: 0.75rem;
     }
 }
