--- a/assets/css/membersv15.css
+++ b/assets/css/membersv15.css
@@ -16,6 +16,11 @@ body {
   height: auto;
 }
 
+.role {
+  display: none;
+  visibility: hidden;
+}
+
 .stars {
   width: 100%;
   height: 0px;
@@ -72,7 +77,7 @@ p.header {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: bold;
   font-style: normal;
 }
@@ -91,7 +96,7 @@ h2 {
   color: white;
   text-align: center;
   font-style: normal;
-  font-size: 25;
+  font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1vh;
 }
@@ -115,7 +120,7 @@ h2 {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: xx-small;
+  font-size: 0.1rem;
   font-weight: medium;
   color: #202020;
   opacity: 0;
@@ -178,6 +183,7 @@ a {
 
 p {
   color: white;
+  font-size: 0.75rem;
 }
 
 @media (min-width: 576px) {
@@ -201,7 +207,11 @@ p {
   }
   .quote {
     font-weight: bold;
-    font-size: x-small;
+    font-size: 0.2rem;
+  }
+  .role {
+    display: block;
+    visibility: visible;
   }
 }
 
@@ -253,13 +263,13 @@ p {
     z-index: 1;
   }
   p {
-    font-size: larger;
+    font-size: 1rem;
   }
 }
 
 @media (min-width: 1200px) {
   .quote {
-    font-size: small;
+    font-size: 0.75rem;
   }
 }
 /*# sourceMappingURL=membersv15.css.map */
