--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -32,11 +32,18 @@ body {
 .stars {
     width: 100%;
     height: 0px;
-    position: absolute;
+    position: relative;
 }
-.stars-img {
-    width: 100%;
+
+.stars-img-1 {
+    width: 15vw;
     height: auto;
+}
+
+.stars-img-2 {
+    width: 15vw;
+    height: auto;
+    margin-left: 85vw;
 }
 
 .helmet {
@@ -45,6 +52,7 @@ body {
     position: absolute;
     bottom: 100px;
 }
+
 .helmet-img-1 {
     width: 8vw;
     height: 8vw;
