--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -215,6 +215,10 @@ p {
     border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
 }
 
+.bubbles1 {
+    padding-left: 2rem;
+}
+
 @media (min-width: 778px) {
 
     .topbar-img {
