--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -16,6 +16,9 @@
     float:left;
 }
 
+.team-header {
+    padding-top: 4rem;
+}
 .row {
     padding-bottom: 0px;
 }
@@ -47,9 +50,6 @@
     height: 20%;
     font-style: italic;
 }
-
-.details {}
-
 
 h2 {
     text-align: left;
@@ -262,3 +262,4 @@ p {
     #proj-title {
         padding-top: 5rem;
     }
+}
