--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -21,6 +21,16 @@ p {
   font-size: 1.15vw;
 }
 
+#load_screen {
+  background: #202020;
+  opacity: 1;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .social-icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -107,10 +117,22 @@ p {
   background: #99CC99;
 }
 
-.solar-system {
-  display: block;
-  margin: 0 auto;
-  width: 80%;
+#projects {
+  min-height: 100%;
+}
+
+img {
+  position: relative;
+  z-index: -1;
+}
+
+.container {
+  position: absolute;
+  z-index: 1;
+}
+
+.project-link:hover {
+  opacity: .1%;
 }
 
 @media (min-width: 576px) {
